# mtgManager

./: CMakeLists.txt  Core.cpp  Core.hpp  Graphical.cpp  Graphical.hpp  build.sh  keyWord.txt  main.cpp  mtgManager.hpp
Cards/: ACard.cpp  ACard.hpp  ICard.hpp
GraphicUtils/: Button.cpp  Button.hpp  utilsfunc.cpp
